delte file from ui working again. icons for new documents show once loaded
Former-commit-id: 5a710ad830cecb6f55bc3591ec62099e56274bf7

--- a/public_HTTPS/sageUI.html
+++ b/public_HTTPS/sageUI.html
@@ -451,10 +451,14 @@
 			hideDialog('mediaBrowserDialog');
 		}
 		else if (element.id === "fileDeleteBtn") {
-			if(confirm("Are you sure you want to delete this file?")){
-				selectedFileEntry = null;
+			if(selectedFileEntry !== null && confirm("Are you sure you want to delete this file?")){
+				var application = selectedFileEntry.getAttribute("application");
+				var file = selectedFileEntry.getAttribute("file");
+				wsio.emit('deleteElementFromStoredFiles', {application: application, filename: file});
+				
 				document.getElementById('thumbnail').src = "images/blank.png";
 				document.getElementById('metadata_text').textContent = "";
+				selectedFileEntry = null;
 				hideDialog('mediaBrowserDialog');
 			}
 		}
