fix touch vs click for iOS
Former-commit-id: 61c35ffda53f052eb223a6098076c8cc1cd6c33e

--- a/public_HTTPS/sageUI.html
+++ b/public_HTTPS/sageUI.html
@@ -611,10 +611,18 @@
 			touchMode = "";
 			event.preventDefault();
 		}
+		else {
+			if(touchTap === 1) {
+				pointerClick(event);
+				event.preventDefault();
+				event.stopPropagation();
+			}
+		}
 		if(touchHold !== null) {
 			clearTimeout(touchHold);
 			touchHold = null;
 		}
+		
 	}
 	
 	function touchMove(event) {
