--- a/public_HTTPS/sageUI.html
+++ b/public_HTTPS/sageUI.html
@@ -404,8 +404,10 @@
 	}
 	
 	function pointerClick(event) {
-		var element = event.srcElement;
-		
+		handleClick(event.srcElement);
+	}
+	
+	function handleClick(element) {	
 		// Menu Buttons
 		if(element.id === "sage2pointer") {
 			interactor.startSAGE2Pointer(element.id);
@@ -428,7 +430,6 @@
 		else if(element.id === "info") {
 			
 		}
-		
 		
 		// App Launcher Dialog
 		else if (element.id === "appOpenBtn") {
@@ -475,7 +476,6 @@
 		else if (element.id === "settingsCloseBtn") {
 			hideDialog('settingsDialog');
 		}
-		
 		
 		// Application Selected
 		else if (element.id.length > 4 && element.id.substring(0, 4) === "app_") {
@@ -554,6 +554,10 @@
 	}
 	
 	function touchStart(event) {
+		if(event.touches.length === 1){
+			touchTime = Date.now();
+		}
+	
 		if(event.srcElement.id === "sage2UI") {
 			if(event.touches.length === 1){
 				var rect = event.srcElement.getBoundingClientRect();
@@ -561,7 +565,6 @@
 				touchStartY = event.touches[0].clientY - rect.top;
 				displayUI.pointerMove(touchStartX, touchStartY);
 				displayUI.pointerPress("left");
-				touchTime = Date.now();
 				touchHold = setTimeout(function() {
 					displayUI.keyDown(8);
 					displayUI.keyUp(8);
@@ -593,30 +596,33 @@
 				touchMode = "";
 			}
 			event.preventDefault();
+			event.stopPropagation();
+		}
+		else {
+			event.stopPropagation();
 		}
 	}
 	
 	function touchEnd(event) {
+		var now = Date.now();
+		if((now-touchTapTime) > 500) { touchTap = 0;                     }
+		if((now-touchTime)    < 250) { touchTap++;   touchTapTime = now; }
+		else                         { touchTap = 0; touchTapTime = 0;   }
+	
 		if(event.srcElement.id === "sage2UI"){
 			if(touchMode === "translate") {
 				displayUI.pointerRelease("left");
-				
-				var now = Date.now();
-				if((now-touchTapTime) > 500) { touchTap = 0;                     }
-				if((now-touchTime)    < 250) { touchTap++;   touchTapTime = now; }
-				else                         { touchTap = 0; touchTapTime = 0;   }
-				
 				if(touchTap === 2) displayUI.pointerDblClick();
 			}
 			touchMode = "";
 			event.preventDefault();
+			event.stopPropagation();
 		}
 		else {
 			if(touchTap === 1) {
-				pointerClick(event);
-				event.preventDefault();
-				event.stopPropagation();
+				handleClick(event.changedTouches[0].target);
 			}
+			event.stopPropagation();
 		}
 		if(touchHold !== null) {
 			clearTimeout(touchHold);
