touch double tap opens files and apps
Former-commit-id: 5805ff8a388ccb9795496a23509e2ecb25cfb55d

--- a/public_HTTPS/sageUI.html
+++ b/public_HTTPS/sageUI.html
@@ -532,7 +532,10 @@
 	}
 	
 	function pointerDblClick(event) {
-		var element = event.target;
+		handleDblClick(event.target);
+	}
+	
+	function handleDblClick(element) {
 		if(element.id === "sage2UI"){
 			displayUI.pointerDblClick();
 			event.preventDefault();
@@ -624,6 +627,9 @@
 		else {
 			if(touchTap === 1) {
 				handleClick(event.changedTouches[0].target);
+			}
+			else if(touchTap === 2) {
+				handleDblClick(event.changedTouches[0].target);
 			}
 			event.stopPropagation();
 		}
