added screen sharing support for Firefox (version 33)
Former-commit-id: 93eadbbfd3cb9feb1b16a8136ad8b97bcd3ffa85

--- a/public_HTTPS/sageUI.html
+++ b/public_HTTPS/sageUI.html
@@ -238,7 +238,7 @@
 			
 			if(event.data.cmd === "SAGE2_desktop_capture-Loaded"){
 				if(interactor !== undefined && interactor !== null)
-					interactor.desktopCaptureEnabled = true;
+					interactor.chromeDesktopCaptureEnabled = true;
 			}
 			if(event.data.cmd === "window_selected"){
 				interactor.captureDesktop(event.data.mediaSourceId);
