updated browser icon in sage UI - fixes image stretch in some browsers/devices
Former-commit-id: 46becc2c6d872960f7d5c85d42e0c1069d06df37

--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -1003,7 +1003,7 @@
 							<label class="sageLabel">Webpage:</label>
 						</td>
 						<td>
-							<input id="openWebpageUrl" size="80" type="text" value="http://www.nytimes.com/"></input>
+							<input id="openWebpageUrl" type="text" value="http://www.nytimes.com/"></input>
 						</td>
 					</tr>
 				</table>
