--- a/public_HTTP/index.html
+++ b/public_HTTP/index.html
@@ -22,6 +22,12 @@
 	var port;
 	
 	function init() {
+		var userAgent = window.navigator.userAgent.toLowerCase();
+		var p = document.createElement('p');
+		p.textContent = userAgent;
+		document.body.appendChild(p);
+		
+		/*
 		hostname = window.location.hostname;
 		port = window.location.port;
 		if(window.location.protocol == "http:" && port == "") port = "80";
@@ -46,6 +52,7 @@
 			}
 		};
 		xhr.send();
+		*/
 	}
 	
 </script>
