add broadcast. fixes issue #22.
Former-commit-id: e59cefdb170ed66ad105cd8c0b53ec046e0cf7f9

--- a/public_HTTPS/display.html
+++ b/public_HTTPS/display.html
@@ -153,6 +153,17 @@
 		wsio.on('setAsMasterDisplay', function() {
 			isMaster = true;
 		});
+		
+		wsio.on('broadcast', function(data) {
+			if(applications[data.app] === undefined){
+				setTimeout(function() {
+					applications[data.app][data.func](data.data);
+				}, 500);
+			}
+			else {
+				applications[data.app][data.func](data.data);
+			}
+		});
 
 		wsio.on('addScript', function(script_data) {
 			var js = document.createElement('script');
