updated app script loading - load one at a time in order
Former-commit-id: 1fc5348f8a861b31336a4ccb7d36a9756d7db7a6

--- a/public_HTTPS/display.html
+++ b/public_HTTPS/display.html
@@ -400,6 +400,8 @@
 							console.log("all resources loaded");
 							loadApplication();
 						}
+						
+						return;
 					}
 					
 					dependencies[data.resrc[idx]] = false;
