added delete (touch and hold ledt-button) for mobile SAGE2 Pointer
Former-commit-id: 50fab35bf9313c911e8efd7f4ec5e52b8c18db02

--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -812,6 +812,10 @@
 		else if(event.target.id === "sage2MobileLeftButton") {
 			interactor.pointerPressMethod({button: 0});
 			touchMode = "translate";
+			touchHold = setTimeout(function() {
+				interactor.pointerKeyDownMethod({keyCode: 8});
+				interactor.pointerKeyUpMethod({keyCode: 8});
+			}, 1500);
 			
 			event.preventDefault();
 			event.stopPropagation();
@@ -920,6 +924,11 @@
 				
 				touchStartX = touchX;
 				touchStartY = touchY;
+				
+				if(touchHold !== null) {
+					clearTimeout(touchHold);
+					touchHold = null;
+				}
 			}
 			
 			event.preventDefault();
