added double-tap for mobile SAGE2 Pointer
Former-commit-id: 0819300411d39c0e94923e31fb2b09646c8d43ff

--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -808,6 +808,9 @@
 				touchStartX = trackpadTouches[0].clientX;
 				touchStartY = trackpadTouches[0].clientY;
 			}
+			else if(trackpadTouches.length === 2) {
+			
+			}
 		}
 		else if(event.target.id === "sage2MobileLeftButton") {
 			interactor.pointerPressMethod({button: 0});
@@ -854,6 +857,7 @@
 		else if(event.target.id === "sage2MobileLeftButton") {
 			if(touchMode === "translate") {
 				interactor.pointerReleaseMethod({button: 0});
+				if(touchTap === 2) interactor.pointerDblClickMethod({});
 			}
 			touchMode = "";
 			event.preventDefault();
