update sage2 UI for menu icons to scale with device pixelRatio
Former-commit-id: 405292b9008e1e8714dc72a571fe3867458dedea

--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -70,6 +70,8 @@
 	var hasMouse;
 	var browser;
 	
+	var pixelRatio;
+	
 	
 	function init() {
 		browser = {};
@@ -88,7 +90,9 @@
 		browser.isWindows  = userAgent.indexOf("windows") >= 0 || userAgent.indexOf("win32") >= 0;
 		browser.isMac      = !browser.isIOS && (userAgent.indexOf("macintosh") >= 0 || userAgent.indexOf("mac os x") >= 0);
 		browser.isLinux    = userAgent.indexOf("linux") >= 0;
-
+		
+		pixelRatio = window.devicePixelRatio;
+		
 		hostname = window.location.hostname;
 		port = window.location.port;
 		if(window.location.protocol == "http:" && port == "") port = "80";
@@ -291,12 +295,74 @@
 			}
 		});
 		
+		initializeMenuUI();
 		resizeDialogs();
 	}
 	
 	function resize() {
 		if (displayUI) displayUI.resize();
 		resizeDialogs();
+	}
+	
+	function initializeMenuUI() {
+		var menuUI = document.getElementById('menuUI');
+		
+		var sage2Pointer = document.getElementById('sage2pointer');
+		sage2Pointer.width  = parseInt(sage2Pointer.width  / pixelRatio, 10);
+		sage2Pointer.height = parseInt(sage2Pointer.height / pixelRatio, 10);
+		var sharescreen = document.getElementById('sharescreen');
+		sharescreen.width  = parseInt(sharescreen.width  / pixelRatio, 10);
+		sharescreen.height = parseInt(sharescreen.height / pixelRatio, 10);
+		var applauncher = document.getElementById('applauncher');
+		applauncher.width  = parseInt(applauncher.width  / pixelRatio, 10);
+		applauncher.height = parseInt(applauncher.height / pixelRatio, 10);
+		var mediabrowser = document.getElementById('mediabrowser');
+		mediabrowser.width  = parseInt(mediabrowser.width  / pixelRatio, 10);
+		mediabrowser.height = parseInt(mediabrowser.height / pixelRatio, 10);
+		//var webbrowser = document.getElementById('browser');
+		//webbrowser.width  = parseInt(webbrowser.width  / pixelRatio, 10);
+		//webbrowser.height = parseInt(webbrowser.height / pixelRatio, 10);
+		var arrangement = document.getElementById('arrangement');
+		arrangement.width  = parseInt(arrangement.width  / pixelRatio, 10);
+		arrangement.height = parseInt(arrangement.height / pixelRatio, 10);
+		var settings = document.getElementById('settings');
+		settings.width  = parseInt(settings.width  / pixelRatio, 10);
+		settings.height = parseInt(settings.height / pixelRatio, 10);
+		var info = document.getElementById('info');
+		info.width  = parseInt(info.width  / pixelRatio, 10);
+		info.height = parseInt(info.height / pixelRatio, 10);
+		
+		var uiButton = getCSSProperty("style_ui.css", ".uiButton");
+		if(uiButton !== null){
+			uiButton.style.width  = parseInt(parseInt(uiButton.style.width,  10) / pixelRatio, 10) + "px";
+			uiButton.style.height = parseInt(parseInt(uiButton.style.height, 10) / pixelRatio, 10) + "px";
+		}
+		var uiButtonImg = getCSSProperty("style_ui.css", ".uiButton img");
+		if(uiButtonImg !== null){
+			uiButtonImg.style.top  = parseInt(parseInt(uiButtonImg.style.top,  10) / pixelRatio, 10) + "px";
+			uiButtonImg.style.left = parseInt(parseInt(uiButtonImg.style.left, 10) / pixelRatio, 10) + "px";
+		}
+		var uiButtonP = getCSSProperty("style_ui.css", ".uiButton p");
+		if(uiButtonP !== null){
+			uiButtonP.style.fontSize = parseInt(parseInt(uiButtonP.style.fontSize, 10) / pixelRatio, 10) + "px";
+			uiButtonP.style.top  = parseInt(parseInt(uiButtonP.style.top,  10) / pixelRatio, 10) + "px";
+			uiButtonP.style.left = parseInt(parseInt(uiButtonP.style.left, 10) / pixelRatio, 10) + "px";
+		}
+	}
+	
+	function getCSSProperty(cssFile, selector) {
+		for(var i=0; i<document.styleSheets.length; i++){
+			var sheet = document.styleSheets[i];
+        	if(sheet.href.indexOf(cssFile) >= 0){
+        		var rules = sheet.cssRules ? sheet.cssRules : sheet.rules;
+        		if(!rules || rules.length === 0) return null;
+        		for(var j=0; j<rules.length; j++){
+                	if(rules[j].selectorText === selector) return rules[j];
+        		}
+        		break;
+        	}
+        }
+        return null;
 	}
 	
 	function resizeDialogs() {
@@ -511,6 +577,17 @@
 		document.addEventListener('dblclick',   pointerDblClick, false);
 
 		document.removeEventListener('mousemove', mouseCheck, false);
+		
+		var uiButtonImg = getCSSProperty("style_ui.css", ".uiButton:hover img");
+		if(uiButtonImg !== null){
+			uiButtonImg.style['-webkit-transform'] = "scale(1.2)";
+			uiButtonImg.style['-moz-transform'] = "scale(1.2)";
+			uiButtonImg.style['transform'] = "scale(1.2)";
+		}
+		var uiButtonP = getCSSProperty("style_ui.css", ".uiButton p");
+		if(uiButtonP !== null){
+			uiButtonP.style.opacity = "0.0";
+		}
 	}
 	
 	function pointerClick(event) {
@@ -519,28 +596,28 @@
 	
 	function handleClick(element) {
 		// Menu Buttons
-		if(element.id === "sage2pointer") {
+		if(element.id === "sage2pointer"      || element.id === "sage2pointerContainer" || element.id === "sage2pointerLabel") {
 			interactor.startSAGE2Pointer(element.id);
 		}
-		else if(element.id === "sharescreen") {
+		else if(element.id === "sharescreen"  || element.id === "sharescreenContainer"  || element.id === "sharescreenLabel") {
 			interactor.startScreenShare();
 		}
-		else if(element.id === "applauncher") {
+		else if(element.id === "applauncher"  || element.id === "applauncherContainer"  || element.id === "applauncherLabel") {
 			wsio.emit('requestAvailableApplications');
 		}
-		else if(element.id === "mediabrowser") {
+		else if(element.id === "mediabrowser" || element.id === "mediabrowserContainer" || element.id === "mediabrowserLabel") {
 			wsio.emit('requestStoredFiles');
 		}
-		else if(element.id === "arrangement") {
+		else if(element.id === "arrangement"  || element.id === "arrangementContainer"  || element.id === "arrangementLabel") {
 			showDialog('arrangementDialog');
 		}
-		else if(element.id === "settings") {
+		else if(element.id === "settings"     || element.id === "settingsContainer"     || element.id === "settingsLabel") {
 			showDialog('settingsDialog');
 		}
-		else if(element.id === "browser") {
+		else if(element.id === "browser"      || element.id === "browserContainer"      || element.id === "browserLabel") {
 			showDialog('browserDialog');
 		}
-		else if(element.id === "info") {
+		else if(element.id === "info"         || element.id === "infoContainer"         || element.id === "infoLabel") {
 			showDialog('infoDialog');
 		}
 		
@@ -1085,38 +1162,38 @@
 		</div>
 		<div id="menuUI">
 			<div id="sage2pointerContainer" class="uiButton">
-				<img alt="pointer" id="sage2pointer" src="images/sage2pointer.svg" width="48" height="48" />
-				<p>SAGE2 Pointer</p>
+				<img id="sage2pointer" alt="pointer" src="images/sage2pointer.svg" width="48" height="48" />
+				<p id="sage2pointerLabel">SAGE2 Pointer</p>
 			</div>
 			<div id="sharescreenContainer" class="uiButton">
-				<img alt="sharescreen" id="sharescreen" src="images/sharescreen.svg" width="48" height="48" />
-				<p>Share Screen</p>
+				<img id="sharescreen" alt="sharescreen" src="images/sharescreen.svg" width="48" height="48" />
+				<p id="sharescreenLabel">Share Screen</p>
 			</div>
 			<div id="applauncherContainer" class="uiButton">
-				<img alt="applauncher" id="applauncher" src="images/applauncher.svg" width="48" height="48"/>
-				<p>App Launcher</p>
+				<img id="applauncher" alt="applauncher" src="images/applauncher.svg" width="48" height="48"/>
+				<p id="applauncherLabel">App Launcher</p>
 			</div>
-			<div id="mediaBrowserContainer" class="uiButton">
-				<img alt="mediabrowser" id="mediabrowser" src="images/mediabrowser.svg" width="48" height="48"/>
-				<p>Media Browser</p>
+			<div id="mediabrowserContainer" class="uiButton">
+				<img id="mediabrowser" alt="mediabrowser" src="images/mediabrowser.svg" width="48" height="48"/>
+				<p id="mediabrowserLabel">Media Browser</p>
 			</div>
 		<!-- browser commented out for now
 			<div id="browserContainer" class="uiButton">
-				<img alt="browser" id="browser" src="images/browser.svg" width="48" height="48"/>
-				<p>Web browser</p>
+				<img id="browser" alt="browser" src="images/browser.svg" width="48" height="48"/>
+				<p id="browserLabel">Web browser</p>
 			</div>
 		-->
 			<div id="arrangementContainer" class="uiButton">
-				<img alt="arrangement" id="arrangement" src="images/arrangement.svg" width="48" height="48"/>
-				<p>Arrangement</p>
+				<img id="arrangement" alt="arrangement" src="images/arrangement.svg" width="48" height="48"/>
+				<p id="arrangementLabel">Arrangement</p>
 			</div>
 			<div id="settingsContainer" class="uiButton">
-				<img alt="settings" id="settings" src="images/settings.svg" width="48" height="48"/>
-				<p>Settings</p>
+				<img id="settings" alt="settings" src="images/settings.svg" width="48" height="48"/>
+				<p id="settingsLabel">Settings</p>
 			</div>
 			<div id="infoContainer" class="uiButton">
-				<img alt="info" id="info" src="images/info.svg" width="48" height="48"/>
-				<p>Info</p>
+				<img id="info" alt="info" src="images/info.svg" width="48" height="48"/>
+				<p id="infoLabel">Information</p>
 			</div>
 		</div>
 	</div>
