updated menu resize
Former-commit-id: f297b41451a9f0aaeb0d3d3d2f3cb0a01d41ae76

--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -303,7 +303,8 @@
 	}
 	
 	function resizeMenuUI() {
-		var menuScale = (window.innerWidth/window.devicePixelRatio) > 768 ? 1.0 : 0.65;
+		//var menuScale = (window.innerWidth/window.devicePixelRatio) > 512 ? 1.0 : 0.65;
+		var menuScale = window.innerWidth > 1024 ? 1.0 : 0.65;
 	
 		var sage2Pointer = document.getElementById('sage2pointer');
 		sage2Pointer.width  = Math.floor(48 * menuScale);
